--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "wanted-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/wogh002/wanted.git",
+  "homepage": "https://github.com/wogh002/wanted",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -19,7 +19,9 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
